--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,16 @@
 # Site settings
-title: Dominik Moritz
-email: domoritz@cmu.edu
+title: John Sterling
+email: jss0122@auburn.edu
 description: > # this means to ignore newlines until "baseurl:"
-   Professor at Carnegie Mellon University and Researcher at Apple. I create interactive data visualization and analysis tools. PhD from University of Washington.
+   Graduate Student at Auburn University. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.domoritz.de" # the base hostname & protocol for your site
-production_url: "https://www.domoritz.de"
-github_username: domoritz
+url: "https://johnsamuelsterling.github.io" # the base hostname & protocol for your site
+production_url: "https://johnsamuelsterling.github.io"
+github_username: johnsamuelsterling
 permalink: /blog/:year/:month/:title.html
-
-twitter:
-  username: domoritz
 
 sass:
   style: compressed
-
-collections:
-  publications:
-    output: false
-
-jekyll-mentions:
-  base_url: https://twitter.com
 
 plugins:
   - jekyll-sitemap
