--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,22 +1,14 @@
-- university: University of Washington
-  years: 2015-2019
-  degree: Ph.D. in Computer Science & Engineering
-  location: Seattle, WA
+- university: Auburn University
+  years: 2023-2025
+  degree: M.S. in Mathematics
+  location: Auburn, AL
   description:
-    - Advised by **Jeffrey Heer** and **Bill Howe**.
-    - "Thesis: \"Interactive Systems for Scalable Visualization & Analysis\"."
-    - Member of the Interactive Data Lab and Database Group.
-- university: University of Washington
-  years: 2013-2015
-  degree: M.S. in Computer Science & Engineering
-  location: Seattle, WA
+    - Advised by **Ziqin Feng**.
+    - "Thesis: \"Vietoris-Rips Complexes of Torus Grids\"."
+    - "GPA: 4.0"
+- university: The University of Alabama in Huntsville
+  years: 2018-2022
+  degree: B.S. in Mathematics
+  location: Huntsville, AL
   description:
-    - Advised by **Bill Howe** and **Jeffrey Heer**.
-- university: Hasso Plattner Institute
-  years: 2010-2013
-  degree: B.S. in IT-Systems Engineering
-  location: Potsdam, Germany
-  description:
-    - "Thesis: \"Algorithms for the Visualization of Software System Evolution\"."
-    - "GPA: 4.0 (1.0 in German system), highest distinction, rank 1/74"
-    - Advanced classes on database implementation, computational geometry, architecture, and logic.
+    - "GPA: 4.0, summa cum laude"
