--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,6 +1,15 @@
-- position: Organizer
-  at: DSIA at VIS 2018
-  url: http://www.interactive-analysis.org/
-- position: Program Committee
-  at: HILDA at SIGMOD 2018
-  url: http://hilda.io/2018/
+
+- position: Advisor
+  at: Auburn Department of Mathematics and Statistics Directed Reading Program 2024-2025
+- position: Volunteer
+  at: Mathematical Puzzle Program 2025
+  url: https://www.auburn.edu/cosam/outreach/stem_outreach/programs/mapp_challenge/index.htm
+- position: Presenter
+  at: Destination STEM 2024
+  url: https://www.auburn.edu/cosam/outreach/stem_outreach/programs/destination-stem/index.htm
+- position: Judge
+  at: Alabama Science and Engineering Fair
+  url: https://www.auburn.edu/cosam/outreach/stem_outreach/programs/asef/index.htm
+- position: Co-organizer
+  at: UAH Putnam Club
+
