--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,28 +1,6 @@
-- message: "At Apple, we released [Swift Charts](https://developer.apple.com/videos/play/wwdc2022/10136/)."
-  date: 2022-06-08
-- message: "At Apple, we released [Audio Graphs](https://developer.apple.com/videos/play/wwdc2021/10122/)."
-  date: 2021-06-08
-- message: "My dissertation won the IEEE VGTC Outstanding Dissertation Award."
-  date: 2020-10-27
-- message: "Starting faculty position at CMU HCII."
-  date: 2020-09-01
-- message: "Adam and I founded the [Data Interaction Group at CMU](https://dig.cmu.edu/)."
-  date: 2019-11-11
-- message: "I started working at Apple."
-  date: 2019-09-23
-- message: "I submitted my dissertation."
-  date: 2019-09-06
-- message: "I passed my final exam (thesis defense)."
-  date: 2019-06-12
-- message: "I passed my general exam and am now a PhD candidate."
-  date: 2018-08-22
-- message: "[Draco](https://uwdata.github.io/draco/) receives the best paper award at InfoVis 2018."
-  date: 2018-07-21
-- message: "I am organizing the [DSIA Workshop](https://www.interactive-analysis.org) at VIS 2018 in Berlin."
-  date: 2018-04-09
-- message: "Vega-Lite is featured by [Nature](https://www.nature.com/articles/d41586-018-01322-9?utm_source=twt_nnc&utm_medium=social&utm_campaign=naturenews&sf180719177=1) as a visualization tool for interactive and reproductible publishing."
-  date: 2018-01-30
-- message: "Vega-Lite 2.1 released with support for geographic maps."
-  date: 2018-01-26
-- message: "Vega-Lite is used for [illustrations](https://makingdatavisual.github.io/figurelist.html) in \"Making Data Visual\" by Danyel Fisher and Miriah Meyer."
-  date: 2018-01-24
+- message: "Alongside Henry Adams, Adenike Adetowbo, Hector Barriga-Acosta, and Ziqin Feng, I completed and submitted a paper on [Vietoris-Rips Complexes of Torus Grids](https://arxiv.org/abs/2502.07134)"
+  date: 2025-02-11
+- message: "I started master's with GTA at [Auburn University](https://www.auburn.edu/cosam/departments/math/)."
+  date: 2023-08-06
+- message: "I graduated from [The University of Alabama in Huntsville](https://www.uah.edu/)."
+  date: 2022-12-16
