--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: jss0122@auburn.edu
 description: > # this means to ignore newlines until "baseurl:"
    Graduate Student at Auburn University. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://johnsterling.github.io" # the base hostname & protocol for your site
-production_url: "https://johnsterling.github.io"
+url: "https://johnsamuelsterling.github.io" # the base hostname & protocol for your site
+production_url: "https://johnsamuelsterling.github.io"
 github_username: johnsamuelsterling
 permalink: /blog/:year/:month/:title.html
 
