--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -10,6 +10,7 @@
   venue: Submitted
   pdf: https://arxiv.org/pdf/2502.07134
   arxiv: "2502.07134"
+  highlight: true 
   description: Partial classification of the homotopy types of Vietoris-Rips complexes of torus grids.
   tags:
     - Algebraic Topology
