changing cv look

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -7,7 +7,7 @@
     - "Thesis: \"Vietoris-Rips Complexes of Torus Grids\"."
     - "GPA: 4.0"
 - university: The University of Alabama in Huntsville
-  years: 2018-2022
+  years: 2022
   degree: B.S. in Mathematics
   location: Huntsville, AL
   description:
