--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   degree: M.S. in Mathematics
   location: Auburn, AL
   description:
-    - Advised by **Ziqin Feng**.
+    - Advised by [Ziqin Feng](https://www.auburn.edu/cosam/faculty/math_stats/fengz/index.htm).
     - "Thesis: \"Vietoris-Rips Complexes of Torus Grids\"."
     - "GPA: 4.0"
 - university: The University of Alabama in Huntsville
