--- a/_data/education.yml
+++ b/_data/education.yml
@@ -8,7 +8,7 @@
     - "GPA: 4.0"
 - university: The University of Alabama in Huntsville
   years: 2022
-  degree: B.S. in Mathematics
+  degree: B.S. in Mathematics, Minor in Philosophy
   location: Huntsville, AL
   description:
     - "GPA: 4.0, summa cum laude"
