--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,20 @@
-- title: "Mosaic, An Architecture for Scalable & Interoperable Data Views (Dominik's Version)"
-  location: "Harvard Medical School"
-  date: 2024-12-09
+- title: "Strategies for Teaching Precalculus"
+  location: Auburn GTA Teaching Seminar
+  city: Auburn, AL
+  type: Seminar
+  date: 2024-09-04
+- title: "Combinatorial Laplacians"
+  location: Auburn Student Research Seminar
+  city: Auburn, AL
+  type: Seminar
+  date: 2024-01-29
+- title: "Generalizations of 1992 A6"
+  location: UAH Putnam Club
+  city: Huntsville, AL
+  type: Seminar
+  date: 2022-09-16
+- title: "Husserl's Phenomenology of Internal Time-Consciousness"
+  location: UAH Philosophy Club
+  city: Huntsville, AL
+  type: Seminar
+  date: 2022-04-20
