--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,6 @@
 - message: "Alongside Henry Adams, Adenike Adetowbo, Hector Barriga-Acosta, and Ziqin Feng, I completed and submitted a paper on [Vietoris-Rips Complexes of Torus Grids](https://arxiv.org/abs/2502.07134)"
   date: 2025-02-11
-- message: "I started master's with GTA at [Auburn University](https://www.auburn.edu/cosam/departments/math/)."
+- message: "I started master's with assistantship at [Auburn University](https://www.auburn.edu/cosam/departments/math/)."
   date: 2023-08-06
 - message: "I graduated from [The University of Alabama in Huntsville](https://www.uah.edu/)."
   date: 2022-12-16
