--- a/_data/employment.yml
+++ b/_data/employment.yml
@@ -2,3 +2,10 @@
   years: 2023-present
   position: Mathematics Graduate Teaching Assistant
   location: Auburn, AL
+- title: Research Associate I, Step I
+  years: 2022-2022
+  company: UAH Rotorcraft System Engineering and Simulation Center
+  location: Huntsville, AL
+  mentors:
+    -Jonathan Patrick
+  description: "Utilized python integration in large scale SysML models for financial optimization."
