removed work experience section

--- a/_data/employment.yml
+++ b/_data/employment.yml
@@ -2,9 +2,9 @@
   years: 2023-present
   position: Mathematics Graduate Teaching Assistant
   location: Auburn, AL
-- title: Research Associate I, Step I
+- university: UAH RSESC
   years: 2022-2022
-  company: UAH Rotorcraft System Engineering and Simulation Center
+  position: Research Associate I, Step I
   location: Huntsville, AL
   mentors:
     -Jonathan Patrick
