--- a/_data/service.yml
+++ b/_data/service.yml
@@ -2,11 +2,12 @@
 - title: Mentor
   at: Auburn Directed Reading Program
   location: Auburn, AL
-  description: "Guided two students through advanced study in measure theory and algebra."
+  description: "Guided two students through advanced study in measure theory."
   years: Spring 2024, Fall 2024
 - title: Volunteer
   at: Mathematical Puzzle Program 2025
   location: Auburn, AL
+  description: "Guided two students through advanced study in measure theory and algebra."
   url: https://www.auburn.edu/cosam/outreach/stem_outreach/programs/mapp_challenge/index.htm
   years: Spring 2025
 - title: Presenter
