change talk formatting

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -11,10 +11,10 @@
 - title: "Generalizations of 1992 A6"
   location: UAH Putnam Club
   city: Huntsville, AL
-  type: Seminar
+  type: Outreach
   date: 2022-09-16
 - title: "Husserl's Phenomenology of Internal Time-Consciousness"
   location: UAH Philosophy Club
   city: Huntsville, AL
-  type: Seminar
+  type: Outreach
   date: 2022-04-20
