--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -8,7 +8,7 @@
   url: "/teaching/217Spring2024"
   professor: Samir Raouafi
   location: Auburn University
-  description: This page organizes calculus I discussion sections 304 and 305 running in Spring 2024.
+  description: Spring 2025
   roledescription: Hold recitation sessions twice a week as well as office hours.
 - title: "MATH 1000: College Algebra"
   panel: true
@@ -18,7 +18,7 @@
   location: Auburn University
   url: "/teaching/234Spring2023"
   image: calculus3.jpg
-  description: This page organizes calculus III discussion sections 343 and 345 running in Spring 2023.
+  description: Fall 2024
   roledescription: Prepared and taught lectures. Created and graded assignments.
 - title: "MATH 2660: Linear Algebra"
   panel: true
@@ -29,7 +29,7 @@
   location: Auburn University
   url: "/teaching/234Fall2022"
   image: calculus3.jpg
-  description: This page organizes calculus III discussion sections 369 and 370 running in Fall 2022.
+  description: Spring 2024
   roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 1120: Precalculus Algebra"
   panel: true
@@ -40,5 +40,5 @@
   location: Auburn University
   url: "/teaching/221Fall2021"
   image: calculus1.jpg
-  description: This page organizes calculus discussion sections running in Fall 2021.
+  description: Fall 2023
   roledescription: Hold weekly problem solving sessions and office hours.
