--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,3 +1,13 @@
-- name: Visualization Significant New Researcher Award
-  years: 2024
-  description: "For impactful work in the development of software infrastructure that has influenced both research and practice."
+- name: UAH President's List
+  years: 2018-2022
+  sponsor: UAH
+  short-description: Awarded every semester.
+- name: Outstanding Undergraduate Achievement in Mathematics
+  years: 2022
+  sponsor: UAH
+- name: Undergraduate Physics Award
+  years: 2018
+  short-description: Awarded to students with the highest grade average in Physics I & II across all sections.
+- name: Undergraduate Astronomy Award
+  years: 2018
+  short-description: Awarded to students with the highest grade average in Astronomy I & II across all sections.
