--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -9,7 +9,7 @@
   professor: Samir Raouafi
   location: Auburn University
   description: Spring 2025
-  roledescription: Hold recitation sessions twice a week as well as office hours.
+  roledescription: Hold recitation sessions and office hours twice weekly.
 - title: "MATH 1000: College Algebra"
   panel: true
   type: Past
