--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -4,7 +4,7 @@
   type: Past
   panel: true
   highlight: 1
-  image: Drawing-1.sketchpad.pdf
+  image: Drawing-1.sketchpad(1).pNG
   url: "/teaching/217Spring2024"
   professor: Samir Raouafi
   location: Auburn University
