--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -28,7 +28,7 @@
   year: Spring 2024
   location: Auburn University
   url: "/teaching/234Fall2022"
-  image: linearalgebraresize.jpg
+  image: linearalgebrastretch.jpg
   description: Spring 2024
   roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 1120: Precalculus Algebra"
