--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,3 +1,7 @@
+- university: Purdue University
+  years: 2025-present
+  degree: PhD in Mathematics
+  location: West Lafayette, IN
 - university: Auburn University
   years: 2023-2025
   degree: M.S. in Mathematics
