--- a/_data/employment.yml
+++ b/_data/employment.yml
@@ -1,5 +1,9 @@
+- university: Purdue University
+  years: 2025-present
+  position: Mathematics Graduate Teaching Assistant
+  location: West Lafayette, IN
 - university: Auburn University
-  years: 2023-present
+  years: 2023-2025
   position: Mathematics Graduate Teaching Assistant
   location: Auburn, AL
 - university: UAH RSESC
