--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: John Sterling
-email: jss0122@auburn.edu
+email: sterli13@purdue.edu
 description: > # this means to ignore newlines until "baseurl:"
-   Graduate Student at Auburn University. 
+   Graduate Student at Purdue University. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://johnsamuelsterling.github.io" # the base hostname & protocol for your site
 production_url: "https://johnsamuelsterling.github.io"
