--- a/_data/mentoring.yml
+++ b/_data/mentoring.yml
@@ -1,5 +1,5 @@
-- name: Hwei-Shin Harriman
-  note: Co-advised with Josh Sunshine.
-  year: 2023-present
-  location: CMU
-  relation: PhD Student
+- name: 
+  note: 
+  year: 
+  location: 
+  relation: 
