--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -17,7 +17,7 @@
   year: Fall 2024
   location: Auburn University
   url: "/teaching/234Spring2023"
-  image: EmmaSMath1000.png
+  image: EmmaSMath1000Resize.png
   description: Fall 2024
   roledescription: Prepared and taught lectures. Created and graded assignments.
 - title: "MATH 2660: Linear Algebra"
