--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,8 @@
+- title: "Vietoris--Rips Complexes of Torus Grids"
+  location: 
+  city: Auburn, AL
+  type: Seminar
+  date: 2024-04-24
 - title: "Strategies for Teaching Precalculus"
   location: Auburn GTA Teaching Seminar
   city: Auburn, AL
