--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,5 +1,5 @@
 - title: "Vietoris--Rips Complexes of Torus Grids"
-  location: 
+  location: Auburn University
   city: Auburn, AL
   type: Seminar
   date: 2024-04-24
