added accepted paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,7 @@
     - Hector Barriga-Acosta
     - Ziqin Feng
     - John Sterling
-  venue: Submitted
+  venue: Accepted at Mediteranean Journal of Mathematics, August 2025
   pdf: https://arxiv.org/pdf/2502.07134
   arxiv: "2502.07134"
   highlight: true 
