--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,8 @@
     - Hector Barriga-Acosta
     - Ziqin Feng
     - John Sterling
-  venue_tags: Accepted at Mediterranean Journal of Mathematics, August
+  venue_tags: Mediterranean Journal of Mathematics
+  venue: Accepted at Mediterranean Journal of Mathematics, August
   pdf: https://arxiv.org/pdf/2502.07134
   arxiv: "2502.07134"
   highlight: true 
