resolved venue tag banner error

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -18,7 +18,7 @@
     - Vietoris-Rips complexes
     - Combinatorial Topology
   type:
-    - Preprint
+    - Publication
 
 - id: VRTorusGridsMastersThesis
   title: "Vietoris-Rips Complexes of Torus Grids (Master's Thesis)"
