venue_tag change

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,8 +7,8 @@
     - Hector Barriga-Acosta
     - Ziqin Feng
     - John Sterling
-  venue_tags: Mediterranean Journal of Mathematics
-  venue: Accepted at Mediterranean Journal of Mathematics, August
+  venue_tags: Mediterr. J. Math.
+  venue: Mediterranean Journal of Mathematics
   pdf: https://arxiv.org/pdf/2502.07134
   arxiv: "2502.07134"
   highlight: true 
