--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,7 +3,7 @@
   year: 2025
   authors:
     - Henry Adams
-    - Adenike Yeside Adetowubo
+    - Adenike Y. Adetowubo
     - Hector Barriga-Acosta
     - Ziqin Feng
     - John Sterling
