--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,3 +1,15 @@
+- title: "MATH 261: Calculus III"
+  role: "Recitation Leader"
+  year: Fall 2025
+  type: Present
+  panel: true
+  highlight: 1
+  image: 
+  url: 
+  professor: Philip Mummert
+  location: Purdue University
+  description: Fall 2025
+  roledescription: Hold weekly recitation sessions
 - title: "MATH 1610: Calculus I"
   role: "Recitation Leader"
   year: Spring 2025
