--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,4 +1,8 @@
-
+- title: Mentor
+  at: Purdue Directed Reading Program
+  location: West Lafayette, IN
+  description: "Mentored [Dhruv Jain](https://www.linkedin.com/in/dhruvjain960/?originalSubdomain=in) in Elementary Algebraic Topology and Topological Data Analysis."
+  years: Fall 2025
 - title: Mentor
   at: Auburn Directed Reading Program
   location: Auburn, AL
