--- a/_data/employment.yml
+++ b/_data/employment.yml
@@ -12,4 +12,4 @@
   location: Huntsville, AL
   mentors:
     -Jonathan Patrick
-  description: "Utilized python integration in large scale SysML models for financial optimization."
+  description: "Developed large scale SysML models for financial optimization."
