--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- message: "I started my mathematics PhD at [Purdue University](https://www.math.purdue.edu/)."
+  date: 2025-08-20
 - message: "I graduated from [Auburn University](https://www.auburn.edu/) with my master's in mathematics."
   date: 2025-05-10
 - message: "Alongside Henry Adams, Adenike Adetowbo, Hector Barriga-Acosta, and Ziqin Feng, I completed and submitted a paper on [Vietoris-Rips Complexes of Torus Grids](https://arxiv.org/abs/2502.07134)"
