--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,10 +1,10 @@
 - title: Mentor
-  at: Purdue Directed Reading Program
+  at: Purdue Mathematics Directed Reading Program
   location: West Lafayette, IN
   description: "Mentored [Dhruv Jain](https://www.linkedin.com/in/dhruvjain960/?originalSubdomain=in) in Elementary Algebraic Topology and Topological Data Analysis."
   years: Fall 2025
 - title: Mentor
-  at: Auburn Directed Reading Program
+  at: Auburn Mathematics Directed Reading Program
   location: Auburn, AL
   description: "Guided two students through advanced study in measure theory."
   years: Spring 2024, Fall 2024
